# clang-blueprint

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  VISION.md  pyproject.toml  requirements.txt  spec.md  task.md
.github/workflows/: ci.yml
ai_api/: __init__.py  indexer.py  server.py
docs/: usability_checklist.md
examples/storage_engine/: CMakeLists.txt
examples/storage_engine/src/: buffer_pool.h  cache_manager.h  data_serializer.h  disk_mgr.cpp  disk_mgr.h  event_handler.h  nvme_controller.h  nvme_driver.h  request_factory.h  resource_manager.h  task_scheduler.h
scanner/: ast_parser.py  diff_engine.py  entry_detector.py  graph_builder.py  incremental.py  main.py  mermaid_generator.py  module_grouper.py  semantic_enricher.py
scripts/: install-hooks.sh  setup.sh  usability_smoke.py  verify_compile_commands.py
tests/: bench_scan_performance.py  rag_groundtruth.json  test_ast_parser.py  test_e2e.py  test_exclude.py  test_incremental.py  test_indexer.py  test_indexer_v2.py  test_module_grouper.py  test_rag_accuracy.py  test_semantic_enricher.py  test_sequence_accuracy.py  test_server.py
tests/fixtures/: basic.cpp  inheritance.cpp
vscode-extension/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/ai/: ClaudeAnalysisProvider.ts  GeminiAnalysisProvider.ts  IAnalysisProvider.ts  LocalAnalysisProvider.ts  factory.ts
vscode-extension/src/analysis/: callTree.ts  callerIndex.ts  context.ts  explorationPath.ts  exploreAdvisor.ts  (+1 more)
vscode-extension/webview/: i18n-bundle.js  index.html
(+22 files in other folders)
