[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clang-blueprint"
version = "0.1.0"
description = "C++ codebase scanner and AI-ready diagram generator powered by libclang"
requires-python = ">=3.9"
dependencies = [
    "libclang>=16.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
blueprint = "scanner.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*", "ai_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
